[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbu-foraeldrebetalt-kostordning"
version = "1.1.0"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow",
    "itk-dev-shared-components",
    "pandas",
    "openpyxl",
    "pyodbc"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "robot_framework",
]
